Refactor admin dashboard order mapping